Break core and bin into separate crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,5 @@
-[package]
-name = "gladius"
-version = "0.1.0"
-edition = "2021"
-authors = [ "Matthew Dickson hi@mattdickson.io"]
-
-[lib]
-name = "gladius_core"
-path = "src/lib.rs"
-
-[[bin]]
-name = "gladius"
-path = "src/bin.rs"
-
-[dependencies]
+[workspace]
+members = [
+  "core",
+  "bin"
+]
