Debug move generation

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,7 +6,12 @@ authors = [ "Matthew Dickson hi@mattdickson.io"]
 
 [dependencies]
 async-trait = "0.1"
+lazy_static = "1.4"
 tokio = "1.30"
 
 [dev-dependencies]
 indoc = "2.0"
+pretty_assertions = "1.4"
+
+[profile.dev]
+overflow-checks = false
