Backfill unit tests, documentation

--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -3,6 +3,7 @@ name = "gladius"
 version = "0.1.0"
 edition = "2021"
 authors = [ "Matthew Dickson hi@mattdickson.io" ]
+documentation = "https://mattdickson.io/gladius/docs"
 
 [dependencies]
 gladius_core = { path = "../core" }
